# dibidab-engine

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
assets/scripts/entities/: Player.lua
source/: luau.cpp  luau.h  main.cpp
source/ai/behavior_trees/: BehaviorTree.cpp  BehaviorTree.h  BehaviorTreeInspector.cpp  BehaviorTreeInspector.h
source/behavior/: Tree.cpp  Tree.h  TreeInspector.cpp  TreeInspector.h
source/behavior/nodes/: ComponentDecoratorNode.cpp  ComponentDecoratorNode.h  ComponentObserverNode.cpp  ComponentObserverNode.h  FunctionalLeafNode.cpp  FunctionalLeafNode.h  LuaLeafNode.cpp  LuaLeafNode.h  NotifyDecoratorNode.cpp  NotifyDecoratorNode.h  WaitNode.cpp  WaitNode.h
source/dibidab/: ComponentInfo.cpp  ComponentInfo.h  StructInfo.cpp  component.cpp  component.h  dibidab.cpp  dibidab.h  dibidab_settings.dibidab.h  struct.cpp  struct.h
source/dibidab/converters/: json_converters.h  lua_converters.h
source/dibidab/utils/: StructEditor.cpp  StructEditor.h
source/ecs/: Engine.cpp  Engine.h  EntityEngine.cpp  EntityEngine.h  EntityInspector.cpp  EntityInspector.h  EntityObserver.cpp  EntityObserver.h  EventEmitter.h  Inspector.cpp  Inspector.h  Observer.cpp  Observer.h  PersistentEntityRef.cpp  PersistentEntityRef.h  PersistentRef.cpp  PersistentRef.h
source/ecs/components/: Animation.h  Behavior.dibidab.h  Brain.dibidab.h  Brain.yaml  Children.dibidab.h  Input.dibidab.h  Input.yaml  Inspecting.dibidab.h  Inspecting.yaml  LuaScripted.dibidab.h  LuaScripted.yaml  Persistent.dibidab.h  Player.dibidab.h  PlayerControlled.dibidab.h  Saving.dibidab.h  Saving.yaml  SoundSpeaker.yaml  Spawning.dibidab.h  Spawning.yaml
source/ecs/components/3d/: Position3d.dibidab.h  Position3d.yaml
source/ecs/entity_templates/: EntityTemplate.cpp  EntityTemplate.h  EntityTemplateArgs.dibidab.h  LuaEntityTemplate.cpp  LuaEntityTemplate.h
source/ecs/systems/: AnimationSystem.cpp  AnimationSystem.h  AudioSystem.cpp  AudioSystem.h  BehaviorTreeSystem.cpp  BehaviorTreeSystem.h  EntitySystem.h  KeyEventsSystem.cpp  KeyEventsSystem.h  LuaScriptsSystem.cpp  LuaScriptsSystem.h  PlayerControlSystem.h  SpawningSystem.cpp  SpawningSystem.h  System.cpp  System.h  TimeOutSystem.cpp  TimeOutSystem.h
source/ecs/systems/networking/: NetworkingSystem.cpp
source/ecs/templates/: LuaTemplate.cpp  LuaTemplate.h  Template.cpp  Template.h  TemplateArgs.dibidab.h
source/game/: DibidabEngineSettings.yaml  SaveGame.cpp  SaveGame.h  dibidab.cpp  dibidab.h  dibidab_settings.dibidab.h
source/game/session/: Player.dibidab.h  Player.h  Player.yaml  Session.cpp  Session.h  SingleplayerSession.cpp  SingleplayerSession.h
source/game/session/multiplayer/: MultiplayerClientSession.cpp  MultiplayerServerSession.cpp  packetsFromServer.yaml
source/game/session/multiplayer/io/: MultiplayerIO.h
source/level/: Level.cpp  Level.h
source/level/room/: Room.cpp  Room.h
source/lua/: lua_converters.cpp  lua_converters.h  luau.cpp  luau.h
source/macro_magic/: SerializableStructInfo.h  component.cpp  component.h  json_converters.h  lua_converters.cpp  lua_converters.h  serializable.cpp  serializable.h
source/reflection/: ComponentInfo.h  EnumInfo.cpp  EnumInfo.h  StructInfo.cpp  StructInfo.h  StructInspector.cpp  StructInspector.h
source/rendering/: ImGuiStyle.h
source/serialization/: json_converters.h
